# c-or-c-plus-plus

./: .cursorrules  .gitignore  CMakeLists.txt  FINAL_COMPREHENSIVE_PROJECTS_LIST.md  Makefile  PRINCIPAL_LEVEL_ASSESSMENT.md  PRINCIPAL_LEVEL_RESEARCH_METHODOLOGY.md  PROBLEM_BASED_PROJECTS.md  PROJECTS_CLARIFICATION.md  PROJECTS_YOU_CAN_BUILD.md  PROJECT_MESSAGE_QUEUE_ROADMAP.md  PROJECT_SELECTION_GUIDE.md  README.md  adapter  array  array.cpp  builder  control_flow.cpp  cracked.md  data_types.cpp  decorator  facade  factory  function  function.cpp  hello-world  hello-world.cpp  loop.cpp  multiple_pointers.cpp  namespace-example.md  observer  oop  oop.cpp  pointers.c  pointers.cpp  read.md  resource.md  single_pointer  single_pointer.cpp  singleton  (+5 more)
build-coordinator/: Cargo.toml  NUMA_OPTIMIZATION_SUMMARY.md  README.md
build-coordinator/examples/: basic_coordination.rs  integration_test.rs  numa_optimization_example.rs
build-coordinator/src/: config.rs  consensus.rs  error.rs  lib.rs  membership.rs  monitoring.rs  networking.rs  types.rs
build-coordinator/src/api/: grpc_api.rs  mod.rs  rest_api.rs
build-coordinator/src/backup_recovery/: cross_region_backup.rs  mod.rs  point_in_time_recovery.rs
build-coordinator/src/compliance/: gdpr_compliance.rs  mod.rs  (+1 more)
build-coordinator/tests/: chaos_engineering.rs
build-database/: AURORADB_REALITY_CHECK.md  AURORADB_UNIQUENESS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EXECUTIVE_SUMMARY.md  MIGRATION_GUIDE.md  README.md  RELEASE_NOTES.md  WHY_AURORADB.md  benchmark_vector_performance.rs  competitive_analysis.md  docker-compose.yml
build-database/benchmarks/: comparative_benchmarks.rs  integration_benchmarks.rs  real_comparative_benchmarks.rs  run-benchmarks.rs  security_performance.rs
build-database/deployment/: README.md  install.sh
build-database/docs/: COMMUNITY_GUIDE.md  ENTERPRISE_DEPLOYMENT_GUIDE.md  PRODUCTION_PROGRESS.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_ROADMAP.md  PROFESSIONAL_SERVICES.md  production_deployment.md
build-database/examples/: analytics-sim.rs  auroradb_acid_demo.rs  auroradb_advanced_features_demo.rs  auroradb_aggregates_demo.rs  auroradb_backup_recovery_demo.rs  auroradb_benchmark_demo.rs  auroradb_concurrent_access_demo.rs  auroradb_connection_pooling_demo.rs  auroradb_crud_demo.rs  auroradb_ddl_demo.rs  auroradb_dml_complete_demo.rs  auroradb_dml_demo.rs  auroradb_enterprise_demo.rs  auroradb_enterprise_monitoring_demo.rs  auroradb_ha_clustering_demo.rs  auroradb_isolation_levels_demo.rs  auroradb_joins_demo.rs  auroradb_monitoring_demo.rs  auroradb_mvcc_demo.rs  auroradb_mysql_comparison_demo.rs  auroradb_networking_demo.rs  auroradb_optimized_vector_demo.rs  auroradb_performance_demo.rs  auroradb_production_demo.rs  auroradb_query_processing_demo.rs  auroradb_real_comparison_demo.rs  auroradb_revolutionary_demo.rs  auroradb_scaling_demo.rs  auroradb_security_demo.rs  auroradb_showcase.rs  auroradb_testing_demo.rs  auroradb_timeseries_demo.rs  auroradb_transaction_demo.rs  auroradb_ultra_revolutionary_demo.rs  auroradb_vector_search_demo.rs  auroradb_wal_demo.rs  auroradb_window_functions_demo.rs  constraints_demo.rs  date_functions_demo.rs  enterprise_use_cases.rs  (+11 more)
build-database/migration/: cli.rs  data_migrator.rs  mod.rs  schema_migrator.rs  validator.rs
build-database/research/: PAIN_POINTS_ANALYSIS.md
build-database/src/: config.rs  core.rs  data.rs  errors.rs  lib.rs  logging.rs  main.rs  schema.rs  types.rs
build-database/tests/: chaos_tests.rs  ddl_test.rs  integration_test.rs  integration_tests.rs  mock_implementations.rs  mod.rs  performance_benchmarks.rs  property_tests.rs  test_utils.rs  working_pipeline_test.rs
build-drivers/: Cargo.toml  README.md
build-drivers/src/: config.rs  connection.rs  error.rs  lib.rs  metrics.rs  pool.rs  protocol.rs  types.rs
build-event-loop/: CMakeLists.txt  CYCLONE_USPS_BUSINESS.md  Cargo.toml  DIRECT_IMPORT_GUIDE.md  Dockerfile  LEARNING_PLAN.md  LEARNING_STRATEGY.md  LIBUV_EVENT_LOOP_STUDY.md  PAIN_POINTS_ANALYSIS.md  PRODUCTION_DEPLOYMENT.md  QUICK_START_LIBUV.md  README.md  RESEARCH_INTEGRATION.md  TOPIC_IMPORT_STRATEGY.md  USING_LIBUV_FILES.md
build-event-loop/benches/: comparative_performance.rs  ffi_performance_benchmarks.rs  ffi_real_performance.rs  real_comparative_benchmarks.rs  real_performance_benchmarks.rs
build-event-loop/config/: production.toml
build-event-loop/examples/: advanced_optimization_demo.rs  basic.rs  cyclone_ecosystem_demo.rs  ffi_validation.rs  iouring_demo.rs  network_benchmark.rs  networking_optimization_demo.rs  numa_scheduler_demo.rs  performance_benchmark.rs  production_http_server.rs  production_monitoring.rs  simd_demo.rs  tcp_server.rs
build-event-loop/include/: libuv_compat.h
build-event-loop/src/: alerting.rs  circuit_breaker.rs  cluster.rs  config.rs  cyclone_web.rs  enterprise_monitoring.rs  error.rs  ffi.rs  graceful_shutdown.rs  iouring.rs  lib.rs  metrics.rs  net.rs  observability.rs  reactor.rs  recovery.rs  runtime.rs  scheduler.rs  security.rs  simd.rs  timer.rs
build-event-loop/tests/: chaos_engineering.rs  cyclone_integration_tests.rs  end_to_end_integration_tests.rs  production_battle_tests.rs
build-query-engine/: Cargo.toml  README.md
build-query-engine/src/: cache.rs  error.rs  executor.rs  lib.rs  optimizer.rs  parser.rs  planner.rs  statistics.rs  types.rs
networking/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  SUCCESS_SUMMARY.md
networking/docs/: http-anatomy.md  performance-guide.md  websocket-anatomy.md
networking/examples/: http_client_test.cpp  http_server_demo.cpp
networking/tests/: test_networking.cpp
snake-game/: .gitignore  CMakeLists.txt  README.md  project.json
snake-game/docs/: prd.txt  tasks.txt
snake-game/include/: Board.hpp  CheckpointManager.hpp  Common.hpp  Food.hpp  Game.hpp  Renderer.hpp  ScoreManager.hpp  Snake.hpp
snake-game/scripts/: build.sh  clean.sh  run.sh
snake-game/src/: Board.cpp  CheckpointManager.cpp  Food.cpp  Game.cpp  Renderer.cpp  ScoreManager.cpp  Snake.cpp  main.cpp
(+1965 files in other folders)
