[package]
name = "aurora-db"
version = "0.1.0"
edition = "2021"
description = "AI-Native HTAP Database - Combining OLTP, OLAP, and AI workloads"
authors = ["AuroraDB Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/auroradb/aurora"
keywords = ["database", "htap", "ai-native", "distributed", "rust"]
categories = ["database", "data-structures", "concurrency"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"
rand = "0.8"
crc32fast = "1.3"
lz4 = "1.24"
zstd = "0.13"
snap = "1.1"
crossbeam = "0.8"
rayon = "1.7"
validator = { version = "0.16", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
rpassword = "7.2"
dirs = "5.0"
hostname = "0.3"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.3"
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
tokio-postgres = "0.7"
mysql_async = "0.32"
tokio = { version = "1.0", features = ["full", "net"] }
bytes = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[workspace]
members = [
    "src/core",
    "src/storage",
    "src/query",
    "src/network",
    "src/distributed"
]
