[package]
name = "aurora-drivers"
version = "0.1.0"
edition = "2021"
description = "AuroraDB Drivers and SDKs - UNIQUENESS Database Connectivity"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "rust-driver",
    "python-driver",
    "go-driver",
    "java-driver",
    "nodejs-driver",
    "cpp-driver",
    "example-apps"
]

[dependencies]
# Core dependencies for all drivers
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
crc32fast = "1.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Networking and TLS
tokio-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
bytes = "1.0"

# AuroraDB protocol
aurora-protocol = { path = "../build-database/src/network/protocols" }

# Cyclone networking
cyclone-networking = { path = "../build-event-loop" }

[features]
default = []
full = ["rust", "python", "go", "java", "nodejs", "cpp"]
rust = []
python = []
go = []
java = []
nodejs = []
cpp = []
