[package]
name = "aurora-query-engine"
version = "0.1.0"
edition = "2021"
description = "AuroraDB Query Engine - UNIQUENESS AI-Powered Query Processing"
license = "MIT OR Apache-2.0"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Data structures
hashbrown = "0.14"
lru = "0.11"

# Math and statistics
statrs = "0.16"

# Parser
pest = "2.0"
pest_derive = "2.0"

# ML/AI (simplified for now)
linfa = "0.6"
ndarray = "0.15"

# AuroraDB integration
aurora-db = { path = "../build-database" }
cyclone-networking = { path = "../build-event-loop" }
aurora-coordinator = { path = "../build-coordinator" }

[features]
default = []
ml_optimization = ["linfa", "ndarray"]
simd_acceleration = []
benchmarking = []

[workspace]
members = [
    "parser",
    "optimizer",
    "executor",
    "ml_optimizer",
    "benchmarks"
]
