[package]
name = "aurora-cli"
version = "1.0.0"
edition = "2021"
authors = ["AuroraDB Team"]
description = "Command-line interface for AuroraDB administration"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rpassword = "7.2"
comfy-table = "7.0"
base64 = "0.21"
